--- a/_includes/head.html
+++ b/_includes/head.html
@@ -121,8 +121,8 @@
 
   <!-- Twitter Cards -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:site" content="@yourhandle">
-  <meta name="twitter:creator" content="@yourhandle">
+  <meta name="twitter:site" content="@Twodragon0">
+  <meta name="twitter:creator" content="@Twodragon0">
   <meta name="twitter:title" content="{% if page.title %}{{ page.title | escape }}{% else %}{{ site.title }}{% endif %}">
   <meta name="twitter:description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 200 }}{% elsif page.description %}{{ page.description }}{% else %}{{ site.description }}{% endif %}">
   <meta name="twitter:image" content="{{ og_image | absolute_url }}">
