--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -10,6 +10,7 @@
 @import "layout";
 @import "components";
 @import "post";
+@import "lightbox";
 @import "syntax";
 @import "chat-widget";
 @import "certification";
